--- a/NEW PROJECT/newproject.css
+++ b/NEW PROJECT/newproject.css
@@ -18,3 +18,10 @@ button:hover {
     background-color: darkblue;
 }
 
+button {
+    background-color: green; /* Changed from blue to green */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
